syntax = "proto3";

enum FigureType {
  NOTE = 0;
  LINE = 1;
  IMAGE = 2;
}

message Coordinates {
  int32 x = 1;
  int32 y = 2;
}

message NoteData { string content = 1; }
message LineData { bytes bitmap = 1; }

message Figure {
  oneof data {
    LineData line_data = 3;
    NoteData note_data = 4;
  }
}

message CreateWhiteboardRequest {}
message GetAllFiguresRequest {}
message GetAllFiguresResponse { repeated Figure figures = 1; }

message MessageWrapper {
  oneof body {
    CreateWhiteboardRequest create_whiteboard_request = 1;
    GetAllFiguresRequest get_all_figures_request = 2;
    GetAllFiguresResponse get_all_figures_response = 3;
  }
}
